Integración API con error en jdk